meta infos html_01

--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0, user-scalable=no" />
+
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="Praxis Lounge"/>
+    <meta property="og:description" content="Interne Chat-App für Pflege"/>
+    <meta property="og:image" content="https://praxislounge.web.app/background.png"/>
+    <meta property="og:site_name" content="Praxis Lounge"/>
+
+
     <title>Praxis Lounge</title>
   </head>
   <body>
