--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0, user-scalable=no" />
 
-    <meta property="og:type" content="website"/>
-    <meta property="og:title" content="Praxis Lounge"/>
-    <meta property="og:description" content="Interne Chat-App für Pflege"/>
-    <meta property="og:image" content="https://praxislounge.web.app/background.png"/>
-    <meta property="og:site_name" content="Praxis Lounge"/>
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://praxislounge.web.app/" />
+    <meta property="og:title" content="Praxis Lounge" />
+    <meta property="og:description" content="Interne Chat-App für Pflege" />
+    <meta property="og:image" content="https://praxislounge.web.app/background.png" />
+    <meta property="og:site_name" content="Praxis Lounge" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Praxis Lounge" />
+    <meta name="twitter:description" content="Interne Chat-App für Pflege" />
+    <meta name="twitter:image" content="https://praxislounge.web.app/background.png" />
 
 
     <title>Praxis Lounge</title>
