--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0, user-scalable=no"/>
+    <meta name="theme-color" content="#464FF9" />
 
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://praxislounge.web.app/" />
